fixed blog spacing

--- a/client/src/components/Blog/BlogPage.module.css
+++ b/client/src/components/Blog/BlogPage.module.css
@@ -30,7 +30,8 @@ div.post{
   margin-top: 5%;
   margin-right: 5%;
   padding-left: 10px;
-  border-left: 2px solid #00ff00
+  border-left: 2px solid #00ff00;
+  line-height: 1.5;
 }
 
 div p{
